[package]
name = "pysqlcrypto"
version = "0.1.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.12.1", features = ["extension-module"] }
sqlcrypto = "0.2.1"